--- a/Dicee Game/index.html
+++ b/Dicee Game/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -47,6 +44,6 @@
     <script src="role.js"></script>
   </body>
   <footer>
-    <p>©Copyright 2021 seungku.choi</p>
+    <p>©Copyright 2022 Seungku Choi</p>
   </footer>
 </html>
