--- a/Simon Game/index.html
+++ b/Simon Game/index.html
@@ -23,6 +23,9 @@
       <button class="btn y">yellow</button>
       <button class="btn b">blue</button>
     </div>
+    <footer>
+      <p>©Copyright 2022 Seungku Choi</p>
+    </footer>
 
     <!-- jQuery -->
     <script
